# -Weekly-Pulse-Automation-

./: .gitignore  Makefile  README.md  docs_section.json  email_teaser.json  generate_groq_report.py  groq_email_preview.html  groq_report.md  pyproject.toml  scratch_report.txt
.github/workflows/: scheduler.yml
config/: default.yaml  development.yaml  mcp_servers.json  production.yaml  products.json  staging.yaml
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  (+1 more)
docs/: architecture.md  implementation_plan.md  problemstatement.md  problemstatement.txt  runbook.md
downloads/: groww_2026_W20_report.json  groww_2026_W25_report.json  groww_2026_W25_reviews.json  indmoney_2026_W25_report.json  indmoney_2026_W25_reviews.json  kuvera_2026_W25_report.json  powerup-money_2026_W25_report.json  powerup-money_2026_W25_reviews.json  wealth-monitor_2026_W25_report.json
scripts/: authenticate_google.py  health_check.py  scheduler.py  setup_cron.sh
src/: __init__.py  api.py  main.py  orchestrator.py
tests/: test_analysis_clustering.py  test_analysis_cost_tracker.py  test_analysis_embeddings.py  test_analysis_models.py  test_analysis_pipeline.py  test_analysis_quote_validator.py  test_analysis_summarizer.py  test_config_logging.py  test_delivery_docs.py  test_delivery_email.py  test_delivery_integration.py  test_delivery_mcp_client.py  test_ingestion_appstore.py  test_ingestion_merger.py  test_ingestion_models.py  test_ingestion_pii.py  test_ingestion_pii_scrubber.py  test_ingestion_pipeline.py  test_ingestion_playstore.py  test_orchestrator.py  test_product_registry.py  test_rendering_docs.py  test_rendering_email.py  test_rendering_integration.py  test_settings.py  test_state_idempotency.py  test_state_models.py  test_state_run_ledger.py  test_week_utils.py
(+34 files in other folders)
