[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse"
version = "0.1.0"
description = "Automated weekly app review pulse for fintech products — transforms App Store & Google Play reviews into insight reports delivered via Google Workspace MCP."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Pulse Team"},
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.27,<1.0",
    "structlog>=24.0,<26.0",
    "click>=8.1,<9.0",
    "rich>=13.0,<14.0",
    "google-play-scraper>=1.2,<2.0",
    "tenacity>=8.2,<9.0",
]

[project.optional-dependencies]
analysis = [
    "openai>=1.30,<2.0",
    "numpy>=1.26,<3.0",
    "umap-learn>=0.5,<1.0",
    "hdbscan>=0.8,<1.0",
    "sentence-transformers>=3.0,<4.0",
]
mcp = [
    "mcp>=1.0,<2.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]
all = ["pulse[analysis,mcp,dev]"]

[project.scripts]
pulse = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
